singolo1.css
body {
  font-family: "Lato", Arial, sans-serif;
}

.wrapper {
  margin: 0 auto;
}

header .wrapper {
  max-width: 1020px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 22px 0px 35px 0px;
  border: transparent 1px solid;
}

a {
  text-decoration: none;
}

header {
  background-color: #2d303a;
  height: 95px;
  box-sizing: border-box;
  border-bottom: #323746 6px solid;
}

header a {
  color: white;
  text-transform: uppercase;
}
.logo{
  padding-left:40px;
}

.logo span {
  font-size: 25px;
  line-height: 6px;
  font-weight: bold;
  color: #f06c64;
  margin-left: -3px;
  display: inline-block;
}

.logo h1 {
  margin: 0;
  display: inline-block;
  font-size: 25px;
  line-height: 6px;
  font-weight: bold;
  letter-spacing: -0.5px;
}

nav{
padding-right: 40px;
}

nav ul {
  list-style-type: none;
  display: flex;
  width: 371px;
  padding: 0;
  justify-content: space-between;
}

nav a {
  font-size: 12px;
  line-height: 6px;
  font-weight: 700;
  letter-spacing: -0.5px;
}

.nav-active {
  color: #bf5d5a;
}

nav li:hover,
nav li:focus {
  opacity: 0.4;
}

nav li:active {
  opacity: 0;
}

nav li::before {
  content: ".";
  color: #494e62;
  font-size: 12px;
  line-height: 6px;
  font-weight: 700;
  position: relative;
  left: -14px;
  top: -2px;
}

nav li:first-child::before {
  content: "";
}

.slider-container {
  position: relative;
  height: 600px;
  box-sizing: border-box;
  background-color: #f06c64;
  border-bottom: #ea676b 6px solid;
  position: relative;
}
.slider-img{
  margin-left: -2px;
}

.slider-container .wrapper{
display: flex;
justify-content: space-between;
align-content: center;
padding-top: 53px;
width: 960px;
margin:0 auto;

}
.button-left {
  background-color: transparent;
  border: none;
  cursor: pointer;
  padding:0;
  padding-left: 12px;   
}

.button-right {
  background-color: transparent;
  border: none;
  cursor: pointer;
  transform: rotateY(180deg);
  padding:0px;
  padding-left: 0px;
  padding-right: 0px;
  margin-right: 10px;
 
}

.services {
  background-color: #f2f2f2;
}

.services .wrapper{
  width: 1020px;
}

.services h2 {
  margin: 0;
  padding-left: 40px;
  padding-top: 68px;
  font-size: 30px;
  line-height: 18px;
  color: #666d89;
  font-weight: 900;
  text-transform: capitalize;
  letter-spacing: -0.2px;
}

.services p {
  font-size: 18px;
  line-height: 30px;
  color: #767e9e;  
  font-weight: 300;
  padding-left: 41px;
  padding-top: 9px;
  letter-spacing: 0.1px;
}

.services-list {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: flex-start;
  padding-left: 40px;
  padding-right: 30px;
  padding-bottom: 57px;
  border-bottom: white 6px solid;
}
/* ? template is not so symmetrical, so I have to change elements width a bit */
.services-item {
  margin-top: -38px;
  margin-bottom: -12px;
  width: 312px;
}
.services-item:nth-child(3),
.services-item:nth-child(6) {
  width: 311px;
}
.services-item:nth-child(2),
.services-item:nth-child(5){
  width: 313px;
}

.services-list img {
  position: relative;
  top: 66px;
  display: inline-block;
}
.services-list h3 {
  margin: 0;
  padding-left: 80px;
  padding-top: 1px;
  font-size: 18px;
  line-height: 18px;
  color: #666d89;
  font-weight: 900;
  letter-spacing: -0.1px;
}

.services-list p {
  display: inline-block;
  width: 215px;
  padding-left: 80px;
  padding-top: 0px;
  margin-top: 9px;
  font-size: 12px;
  line-height: 22px;
  color: #767e9e;
  font-weight: 400;
  letter-spacing: -0.1px;
  overflow: hidden;
  max-height: 66px;
}

/*? This is because original PSD is bit messed up */

.services-item:nth-child(3) h3,
.services-item:nth-child(6) h3{
  padding-left: 82.5px;
}

